# atlas

./: .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  README.md  package.xml
details/: config.h  macros.h
docs/: FSInfo.md  Observer.md  Singleton.md  ThreadPool.md  Timer.md
docs/pattern/: Observer.md  Singleton.md  subject.md  thread_pool.md
docs/sys/: FSInfo.md  Timer.md
io/: image_sequence_provider.h
pattern/: observer.h  singleton.h
ros/: image_subscriber.h  service_server_manager.h
src/lib_atlas/: config.h  exceptions.h  macros.h  maths.h  typedef.h
src/lib_atlas/details/: macros.h  pointers.h
src/lib_atlas/exceptions/: corrupted_data_exception.h  io_exception.h  port_not_opened_exception.h  serial_exception.h
src/lib_atlas/io/: formatter.h  formatter_inl.h  image_sequence_capture.h  image_sequence_capture_inl.h  image_sequence_provider_inl.h  image_sequence_writer.h  image_sequence_writer_inl.h  serial.cc  serial.h  serial_inl.h
src/lib_atlas/io/details/: serial_impl.h  serial_impl_inl.h
src/lib_atlas/io/impl/: unix.cc  unix.h  unix_inl.h
src/lib_atlas/maths/: averaging.h  averaging_inl.h  conversion.h  conversion_inl.h  histogram.h  histogram_inl.h  matrix.h  matrix_inl.h  numbers.h  numbers_inl.h  pid.h  pid_inl.h  stats.h  stats_inl.h  trigo.h  trigo_inl.h
src/lib_atlas/pattern/: observer.h  observer_inl.h  runnable.h  runnable_inl.h  singleton.h  subject.h  subject_inl.h  thread_pool.cc  thread_pool.h
src/lib_atlas/ros/: configuration_parser.h  image_publisher.h  image_publisher_inl.h  image_subscriber.h  ros_manager.h  service_client_manager.h  service_server_manager.h
src/lib_atlas/sys/: fsinfo.h  fsinfo_inl.h  list_port.h  list_ports_linux.h  list_ports_osx.h  timer.h  timer_inl.h
sys/: fsinfo.h  fsinfo_inl.h  timer.h
test/: CMakeLists.txt  averaging_test.cc  formatter_test.cc  fsinfo_test.cc  histogram_test.cc  image_node_test.cc  matrix_test.cc  numbers_test.cc  observer_test.cc  runnable_test.cc  serial_test.cc  stats_test.cc  timer_test.cc  trigo_test.cc  unix_serial_tests.cc
