<package>
  <!-- Package Metadata -->
  <name>lib_atlas</name>
  <maintainer email="thibaut.mattio@gmail.com">Thibaut Mattio</maintainer>
  <description>
    A librairie that helps you build ROS packages faster
  </description>
  <version>0.0.1</version>
  <license>MIT</license>

  <!-- Required by Catkin -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Package Dependencies -->
  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>
</package>