<package>
  <!-- Package Metadata -->
  <name>lib_atlas</name>
  <maintainer email="thibaut.mattio@gmail.com">Thibaut Mattio</maintainer>
  <description>
    A librairie that helps you build ROS packages faster
  </description>
  <version>0.0.1</version>
  <license>MIT</license>

  <!-- Required by Catkin -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Package Dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>cmake_modules</run_depend>
</package>