<package>
  <name>lib_atlas</name>

  <author>Thibaut Mattio</author>

  <maintainer email="thibaut.mattio@gmail.com">Thibaut Mattio</maintainer>

  <description>
    A library that helps you build ROS packages faster
  </description>
  <version>1.0.0</version>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>cmake_modules</run_depend>
</package>