catkin_add_gtest( fsinfo_test fsinfo_test.cc )
catkin_add_gtest( observer_test observer_test.cc )
catkin_add_gtest( timer_test timer_test.cc )
catkin_add_gtest( image_node_test image_node_test.cc )
target_link_libraries( image_node_test ${catkin_LIBRARIES} )
catkin_add_gtest( runnable_test runnable_test.cc )
catkin_add_gtest( stats_test stats_test.cc )
catkin_add_gtest( numbers_test numbers_test.cc )
catkin_add_gtest( trigo_test trigo_test.cc )
catkin_add_gtest( histogram_test histogram_test.cc )

if(UNIX)
    catkin_add_gtest(serial_test serial_test.cc)
    target_link_libraries(serial_test ${Boost_LIBRARIES})
    if(NOT APPLE)
        target_link_libraries(serial_test util)
    endif()
endif()
